--- a/index.html
+++ b/index.html
@@ -170,13 +170,17 @@
           </div>
 
         <div class="col-12 text-center">
-          <button type="submit" class="btn btn-warning mb-5">Send</button>
+          <button type="submit" class="btn btn-warning mb-4">Send</button>
         </div>
       </div>
 
-      
+        <div class="mb-5">
+          <h3 id="final_price"></h3>
+        </div>
+
       </form>
 
+    
     </div>
 
         </div>
