--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <option value="33.60">Analisi Progettuale</option>
           </select>
         </div>
-        <div class="col-lg-6 col-md-6 col-12">
+        <div class="col-lg-6 col-md-6 col-12" id="discount_box">
           <label for="inputCodeDiscount" class="form-label">Discount Code</label>
           <input type="text" class="form-control" id="inputCodeDiscount">
         </div>
