--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
       </div>
 
-      <div class="row justify-content-center mt-3">
+      <div class="row justify-content-center mt-3" id="card_row">
 
         <div class="col-lg-4 col-md-6 col-12 mb-5 card-hov">
             <img class="img-fluid" src="./img/cabin.png" alt="foto completo verde">
